dnm/envoy.yaml
static_resources:
  listeners:
    - name: main
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/login"
                          route:
                            cluster: login_service
                        - match:
                            prefix: "/helloworld"
                          route:
                            cluster: hello_service

                http_filters:
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                      providers:
                        keycloak:
                          issuer: "http://192.168.1.105:8080/realms/myrealm"
                          remote_jwks:
                            http_uri:
                              uri: "http://192.168.1.105:8080/realms/myrealm/protocol/openid-connect/certs"
                              cluster: keycloak_cluster
                              timeout: 5s
                            cache_duration:
                              seconds: 300
                          forward: true
                          payload_in_metadata: "jwt_payload"
                      rules:
                        - match:
                            prefix: "/helloworld"
                          requires:
                            provider_name: "keycloak"

                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: login_service
      type: LOGICAL_DNS
      connect_timeout: 1s
      load_assignment:
        cluster_name: login_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: login_service
                      port_value: 5000

    - name: hello_service
      type: LOGICAL_DNS
      connect_timeout: 1s
      load_assignment:
        cluster_name: hello_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: hello_service
                      port_value: 5001
    - name: keycloak_cluster
      type: LOGICAL_DNS
      connect_timeout: 1s
      load_assignment:
        cluster_name: keycloak_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: keycloak
                      port_value: 8080
